--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 
     <name>Prog.kiev.ua, Java OOP</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+	
     <build>
         <plugins>
             <plugin>
